# incubyte

./: .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 17aae3802be6_create_core_tables.py  b7b7b2354964_add_partial_unique_index_for_current_.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  employees.py  meta.py
backend/app/core/: money.py  pagination.py
backend/app/models/: __init__.py  compensation.py  country.py  department.py  employee.py
backend/app/repositories/: analytics_repo.py  employee_repo.py
backend/app/schemas/: analytics.py  common.py  employee.py
backend/app/services/: analytics_service.py  employee_service.py
backend/seed/: seed.py
backend/tests/: conftest.py  test_analytics_api.py  test_analytics_service.py  test_constraints.py  test_employees_api.py  test_health.py  test_money.py  test_seed.py
docs/: ai-usage.md  backend.md  design-decisions.md  requirements.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: EmployeeFormModal.test.tsx  EmployeeFormModal.tsx  Layout.tsx  QueryState.tsx  StatCard.tsx  StatusBadge.tsx
frontend/src/pages/: DashboardPage.test.tsx  DashboardPage.tsx  EmployeesPage.test.tsx  EmployeesPage.tsx
(+3 files in other folders)
