[project]
name = "salary-management-backend"
version = "0.1.0"
description = "Salary management backend API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.9",
    "faker>=33",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic migration scripts are machine-generated; don't lint them.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI relies on Depends()/Query() in argument defaults by design.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
